--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -1,2 +1,135 @@
 iam:
   extension-name: IAM
+  common:
+    address: Address
+    bulk-action: Bulk Action
+    country: Country
+    create: Created
+    dashboard: Dashboard 
+    description: Description
+    email: Email
+    export: Export
+    group: Groups
+    member: Members
+    name: Name
+    new: New
+    permission: Permission
+    phone: Phone
+    photo: photos
+    policie: Policies
+    primary: primary
+    role: Roles
+    status: Status
+    type: Type
+    user: Users
+  components:
+    modals:
+      group-details:    
+        group-name: Group Name
+      group-form:
+        group-name: Group Name
+        group-description: Group Description
+        select-users-add-group: Select users to add to group
+        search-select-users-add-group: Search and select users to add to this group.
+        select-user-add-group: Select user to add to group
+        no-user-add-group: No users added to group
+      policy-form:
+        policy-name: Policy Name
+        enter-name-your-policy: Enter a name for your policy
+        policy-description: Policy Description
+        enter-description-your-policy: Enter a description for your policy
+        select-permissions: Select Permissions
+      role-form:
+        role-name: Role Name
+        enter-name-for-this-role: Enter a name for this role
+        role-description: Role Description
+        enter-description-your-role: Enter a description for your role
+        select-permission: Select Permissions
+    table:
+      group-members:
+        no-member: No Members
+    permission-picker:
+      selected: >-
+        Selected: 
+      search-permissions-keyword: Search permissions by keywords
+      loading-permission: Loading permissions...
+  groups:
+    index:
+      untitled: Untitled
+      delete-group-title: Delete {groupName} group
+      delete-group-success-message: Group {name} deleted.
+      delete-group: Delete Groups
+      created: Created
+      edit-group: Edit group...
+      delete-group-label: Delete group...
+      new-group: New Group
+      new-group-created: New group created.
+      edit-group-title: Edit Group
+      changes-group-save: Changes to group saved.
+      data-assosciated-this-group-deleted: Are you sure you want to delete this group? All data assosciated with this group will also be deleted. This action cannot be undone.
+  policies:
+    index:
+      title: Policies
+      delete-policies: Delete Policies
+      contact-action: Contact Actions
+      edit-policy: Edit policy...
+      delete-policy: Delete policy...
+      new-policy: New Policy
+      new-policy-created: New policy created.
+      unable-changes-policy-warning: Unable to make changes to a {policyType} policy.
+      edit-policy-title: Edit Policy
+      changes-policy-saved-success: Changes to policy saved.
+      unable-delete-policy-warning: Unable to delete a {policyType} policy.
+      data-assosciated-this-policy-deleted: Are you sure you want to delete this policy? All data assosciated with this policy will also be deleted. This action cannot be undone.
+      policy-deleted: Policy {policyName} deleted.
+  roles:
+    index:
+      delete-roles: Delete Roles
+      contact-action: Contact Actions
+      edit-role: Edit role...
+      delete-role: Delete role...
+      new-role: New Role
+      new-role-create: New role created
+      edit-role-title: Edit Role
+      changes-role-saved: Changes to role saved.
+      data-assosciated-this-role-deleted: Are you sure you want to delete this role? All data assosciated with this role will also be deleted. This action cannot be undone.
+      role-deleted: Role {roleName} deleted.
+  users:
+    index:
+      delete-user-title: Delete {userName} user
+      delete-user-success-message: User {userName} deleted.
+      deactivate-user-title: Deactivate {userName} user's account
+      deactivate-user-success-message: User {userName} deactivated.
+      re-activate-user-title: Re-activate {userName} user's account
+      re-activate-user-success-message: User {userName} activated.
+      delete-users: Delete Users
+      last-login: Last Login
+      created-at: Created At
+      updated-at: Updated At
+      contact-action: Contact Actions
+      edit-user: Edit user...
+      re-send-invitation: Re-send invitation...
+      deactivate-user: Deactivate user...
+      activate-user: Activate user...
+      delete-user: Delete user...
+      new-user: New User
+      user-invited-join-your-organization-success: User has been invited to join your organization.
+      edit-user-title: Edit User
+      user-changes-saved-success: User changes saved.
+      error-you-cant-delete-yourself: You can't delete yourself
+      data-assosciated-user-delete: Are you sure you want to delete this user? All data assosciated with this user will also be deleted. This action cannot be undone.
+      access-account-or-resources-unless-re-activated: Are you sure you want to deactivate this user? This user will no longer be able to access their account or resources unless re-activated.
+      this-user-will-regain-access-to-your-organization: Are you sure you want to re-activate this user? This user will regain access to your organization.
+      resend-invitation-to-join-organization: Resend invitation to join organization
+      confirming-fleetbase-will-re-send-invitation-for-user-to-join-your-organization: By confirming Fleetbase will re-send the invitation for this user to join your organization.
+      invitation-resent: Invitation resent.
+  application:
+      access-management: Access Management
+  home:
+      identity-access-management: Identity & Access Management
+  
+      
+
+
+
+      
